part of the tooltip wrapping fix

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@
   margin: 2px;
   color: white;
   display: inline;
+  white-space: nowrap;
 }
 
 .gratLines {
